# wro_competition_ros_simulation

./: .gitignore  README.md
devel/: .catkin  setup.sh
devel/lib/four_wheel_steering_controller/: four_wheel_steering
devel/lib/limo_gazebo_sim/: avoid.py  camera.py  camera2.py
devel/lib/my_robot_localization/: test.py
devel/lib/pkgconfig/: autokit.pc  bunker_description.pc  four_wheel_steering_controller.pc  four_wheel_steering_msgs.pc  hunter2_base.pc  hunter2_control.pc  hunter2_gazebo.pc  hunter_se_control.pc  hunter_se_description.pc  hunter_se_gazebo.pc  limo_gazebo_sim.pc  limo_s2_arm.pc  limo_s2_description.pc  limo_s2_gazebo_sim.pc  my_robot.pc  my_robot_localization.pc  ranger_mini_control.pc  ranger_mini_v2.pc  ranger_mini_v2_gazebo.pc  ranger_mini_v3.pc  ranger_mini_v3_gazebo.pc  robot.pc  robot_description.pc  robot_testing_node.pc  scout_control.pc  scout_description.pc  scout_gazebo_sim.pc  self_driving_car.pc  steer_bot_control.pc  steer_bot_description.pc  steer_bot_gazebo.pc  (+8 more)
src/limo_gazebo_sim/: CMakeLists.txt
src/limo_gazebo_sim/config/: ekf_config.yaml  limo_ackerman_control.yaml
src/limo_gazebo_sim/launch/: limo_ackerman.launch
src/limo_gazebo_sim/scripts/: 180degree  3rounds  Untitled Document 2  avoid.py  camera.py  full with depth  imu90.py  roi solution  test1 illustrate  test1 perfect  test1.py  test2.py
src/limo_gazebo_sim/src/: gazebo_ros_ackerman_drive.cpp
src/limo_gazebo_sim/worlds/: empty.world  empty1.world
src/my_robot_localization/: CMakeLists.txt  ekf_config.yaml
src/robot_description/: CMakeLists.txt  package.xml
(+64 files in other folders)
